restructure models package
